Compilation principle practice/test10/code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> function
Rule 8     statement -> run_function
Rule 9     statement -> class
Rule 10    operation -> VARIABLE = expression
Rule 11    operation -> self = expression
Rule 12    operation -> VARIABLE + = expression
Rule 13    operation -> VARIABLE - = expression
Rule 14    operation -> VARIABLE [ expression ] = expression
Rule 15    assignment -> VARIABLE = NUMBER
Rule 16    assignment -> self = VARIABLE
Rule 17    assignment -> VARIABLE = VARIABLE
Rule 18    assignment -> VARIABLE [ expression ] = NUMBER
Rule 19    assignment -> VARIABLE = VARIABLE [ expression ]
Rule 20    assignment -> VARIABLE = VARIABLE ( expressions )
Rule 21    expressions -> <empty>
Rule 22    expressions -> expression
Rule 23    expressions -> expressions , expression
Rule 24    expression -> term
Rule 25    expression -> expression + term
Rule 26    expression -> expression - term
Rule 27    term -> factor
Rule 28    term -> term * factor
Rule 29    term -> term / factor
Rule 30    factor -> STR
Rule 31    factor -> self
Rule 32    factor -> NUMBER
Rule 33    factor -> VARIABLE
Rule 34    factor -> ( expression )
Rule 35    factor -> VARIABLE [ expression ]
Rule 36    print -> PRINT ( variables )
Rule 37    function -> DEF VARIABLE ( variables ) { statements }
Rule 38    function -> DEF VARIABLE ( SELF ) { statements }
Rule 39    function -> DEF VARIABLE ( SELF , variables ) { statements }
Rule 40    run_function -> VARIABLE ( expressions )
Rule 41    run_function -> VARIABLE . VARIABLE ( expressions )
Rule 42    variables -> <empty>
Rule 43    variables -> VARIABLE
Rule 44    variables -> self
Rule 45    variables -> variables , VARIABLE
Rule 46    variables -> variables , self
Rule 47    class -> CLASS VARIABLE { statements }
Rule 48    self -> SELF . VARIABLE

Terminals, with rules where they appear

(                    : 20 34 36 37 38 39 40 41
)                    : 20 34 36 37 38 39 40 41
*                    : 28
+                    : 12 25
,                    : 23 39 45 46
-                    : 13 26
.                    : 41 48
/                    : 29
=                    : 10 11 12 13 14 15 16 17 18 19 20
CLASS                : 47
DEF                  : 37 38 39
NUMBER               : 15 18 32
PRINT                : 36
SELF                 : 38 39 48
STR                  : 30
VARIABLE             : 10 12 13 14 15 16 17 17 18 19 19 20 20 33 35 37 38 39 40 41 41 43 45 47 48
[                    : 14 18 19 35
]                    : 14 18 19 35
error                : 
{                    : 37 38 39 47
}                    : 37 38 39 47

Nonterminals, with rules where they appear

assignment           : 4
class                : 9
expression           : 10 11 12 13 14 14 18 19 22 23 25 26 34 35
expressions          : 20 23 40 41
factor               : 27 28 29
function             : 7
operation            : 5
print                : 6
program              : 0
run_function         : 8
self                 : 11 16 31 44 46
statement            : 2 3
statements           : 1 2 37 38 39 47
term                 : 24 25 26 28 29
variables            : 36 37 39 45 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . function
    (8) statement -> . run_function
    (9) statement -> . class
    (15) assignment -> . VARIABLE = NUMBER
    (16) assignment -> . self = VARIABLE
    (17) assignment -> . VARIABLE = VARIABLE
    (18) assignment -> . VARIABLE [ expression ] = NUMBER
    (19) assignment -> . VARIABLE = VARIABLE [ expression ]
    (20) assignment -> . VARIABLE = VARIABLE ( expressions )
    (10) operation -> . VARIABLE = expression
    (11) operation -> . self = expression
    (12) operation -> . VARIABLE + = expression
    (13) operation -> . VARIABLE - = expression
    (14) operation -> . VARIABLE [ expression ] = expression
    (36) print -> . PRINT ( variables )
    (37) function -> . DEF VARIABLE ( variables ) { statements }
    (38) function -> . DEF VARIABLE ( SELF ) { statements }
    (39) function -> . DEF VARIABLE ( SELF , variables ) { statements }
    (40) run_function -> . VARIABLE ( expressions )
    (41) run_function -> . VARIABLE . VARIABLE ( expressions )
    (47) class -> . CLASS VARIABLE { statements }
    (48) self -> . SELF . VARIABLE

    VARIABLE        shift and go to state 10
    PRINT           shift and go to state 12
    DEF             shift and go to state 13
    CLASS           shift and go to state 15
    SELF            shift and go to state 14

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    function                       shift and go to state 7
    run_function                   shift and go to state 8
    class                          shift and go to state 9
    self                           shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . function
    (8) statement -> . run_function
    (9) statement -> . class
    (15) assignment -> . VARIABLE = NUMBER
    (16) assignment -> . self = VARIABLE
    (17) assignment -> . VARIABLE = VARIABLE
    (18) assignment -> . VARIABLE [ expression ] = NUMBER
    (19) assignment -> . VARIABLE = VARIABLE [ expression ]
    (20) assignment -> . VARIABLE = VARIABLE ( expressions )
    (10) operation -> . VARIABLE = expression
    (11) operation -> . self = expression
    (12) operation -> . VARIABLE + = expression
    (13) operation -> . VARIABLE - = expression
    (14) operation -> . VARIABLE [ expression ] = expression
    (36) print -> . PRINT ( variables )
    (37) function -> . DEF VARIABLE ( variables ) { statements }
    (38) function -> . DEF VARIABLE ( SELF ) { statements }
    (39) function -> . DEF VARIABLE ( SELF , variables ) { statements }
    (40) run_function -> . VARIABLE ( expressions )
    (41) run_function -> . VARIABLE . VARIABLE ( expressions )
    (47) class -> . CLASS VARIABLE { statements }
    (48) self -> . SELF . VARIABLE

    $end            reduce using rule 1 (program -> statements .)
    VARIABLE        shift and go to state 10
    PRINT           shift and go to state 12
    DEF             shift and go to state 13
    CLASS           shift and go to state 15
    SELF            shift and go to state 14

    statement                      shift and go to state 16
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    function                       shift and go to state 7
    run_function                   shift and go to state 8
    class                          shift and go to state 9
    self                           shift and go to state 11

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    SELF            reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    CLASS           reduce using rule 4 (statement -> assignment .)
    SELF            reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    DEF             reduce using rule 5 (statement -> operation .)
    CLASS           reduce using rule 5 (statement -> operation .)
    SELF            reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    CLASS           reduce using rule 6 (statement -> print .)
    SELF            reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> function .

    VARIABLE        reduce using rule 7 (statement -> function .)
    PRINT           reduce using rule 7 (statement -> function .)
    DEF             reduce using rule 7 (statement -> function .)
    CLASS           reduce using rule 7 (statement -> function .)
    SELF            reduce using rule 7 (statement -> function .)
    $end            reduce using rule 7 (statement -> function .)
    }               reduce using rule 7 (statement -> function .)


state 8

    (8) statement -> run_function .

    VARIABLE        reduce using rule 8 (statement -> run_function .)
    PRINT           reduce using rule 8 (statement -> run_function .)
    DEF             reduce using rule 8 (statement -> run_function .)
    CLASS           reduce using rule 8 (statement -> run_function .)
    SELF            reduce using rule 8 (statement -> run_function .)
    $end            reduce using rule 8 (statement -> run_function .)
    }               reduce using rule 8 (statement -> run_function .)


state 9

    (9) statement -> class .

    VARIABLE        reduce using rule 9 (statement -> class .)
    PRINT           reduce using rule 9 (statement -> class .)
    DEF             reduce using rule 9 (statement -> class .)
    CLASS           reduce using rule 9 (statement -> class .)
    SELF            reduce using rule 9 (statement -> class .)
    $end            reduce using rule 9 (statement -> class .)
    }               reduce using rule 9 (statement -> class .)


state 10

    (15) assignment -> VARIABLE . = NUMBER
    (17) assignment -> VARIABLE . = VARIABLE
    (18) assignment -> VARIABLE . [ expression ] = NUMBER
    (19) assignment -> VARIABLE . = VARIABLE [ expression ]
    (20) assignment -> VARIABLE . = VARIABLE ( expressions )
    (10) operation -> VARIABLE . = expression
    (12) operation -> VARIABLE . + = expression
    (13) operation -> VARIABLE . - = expression
    (14) operation -> VARIABLE . [ expression ] = expression
    (40) run_function -> VARIABLE . ( expressions )
    (41) run_function -> VARIABLE . . VARIABLE ( expressions )

    =               shift and go to state 17
    [               shift and go to state 18
    +               shift and go to state 20
    -               shift and go to state 21
    (               shift and go to state 19
    .               shift and go to state 22


state 11

    (16) assignment -> self . = VARIABLE
    (11) operation -> self . = expression

    =               shift and go to state 23


state 12

    (36) print -> PRINT . ( variables )

    (               shift and go to state 24


state 13

    (37) function -> DEF . VARIABLE ( variables ) { statements }
    (38) function -> DEF . VARIABLE ( SELF ) { statements }
    (39) function -> DEF . VARIABLE ( SELF , variables ) { statements }

    VARIABLE        shift and go to state 25


state 14

    (48) self -> SELF . . VARIABLE

    .               shift and go to state 26


state 15

    (47) class -> CLASS . VARIABLE { statements }

    VARIABLE        shift and go to state 27


state 16

    (2) statements -> statements statement .

    VARIABLE        reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    CLASS           reduce using rule 2 (statements -> statements statement .)
    SELF            reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    }               reduce using rule 2 (statements -> statements statement .)


state 17

    (15) assignment -> VARIABLE = . NUMBER
    (17) assignment -> VARIABLE = . VARIABLE
    (19) assignment -> VARIABLE = . VARIABLE [ expression ]
    (20) assignment -> VARIABLE = . VARIABLE ( expressions )
    (10) operation -> VARIABLE = . expression
    (24) expression -> . term
    (25) expression -> . expression + term
    (26) expression -> . expression - term
    (27) term -> . factor
    (28) term -> . term * factor
    (29) term -> . term / factor
    (30) factor -> . STR
    (31) factor -> . self
    (32) factor -> . NUMBER
    (33) factor -> . VARIABLE
    (34) factor -> . ( expression )
    (35) factor -> . VARIABLE [ expression ]
    (48) self -> . SELF . VARIABLE

    NUMBER          shift and go to state 29
    VARIABLE        shift and go to state 28
    STR             shift and go to state 34
    (               shift and go to state 31
    SELF            shift and go to state 14

    expression                     shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 33
    self                           shift and go to state 35

state 18

    (18) assignment -> VARIABLE [ . expression ] = NUMBER
    (14) operation -> VARIABLE [ . expression ] = expression
    (24) expression -> . term
    (25) expression -> . expression + term
    (26) expression -> . expression - term
    (27) term -> . factor
    (28) term -> . term * factor
    (29) term -> . term / factor
    (30) factor -> . STR
    (31) factor -> . self
    (32) factor -> . NUMBER
    (33) factor -> . VARIABLE
    (34) factor -> . ( expression )
    (35) factor -> . VARIABLE [ expression ]
    (48) self -> . SELF . VARIABLE

    STR             shift and go to state 34
    NUMBER          shift and go to state 38
    VARIABLE        shift and go to state 36
    (               shift and go to state 31
    SELF            shift and go to state 14

    expression                     shift and go to state 37
    term                           shift and go to state 32
    factor                         shift and go to state 33
    self                           shift and go to state 35

state 19

    (40) run_function -> VARIABLE ( . expressions )
    (21) expressions -> .
    (22) expressions -> . expression
    (23) expressions -> . expressions , expression
    (24) expression -> . term
    (25) expression -> . expression + term
    (26) expression -> . expression - term
    (27) term -> . factor
    (28) term -> . term * factor
    (29) term -> . term / factor
    (30) factor -> . STR
    (31) factor -> . self
    (32) factor -> . NUMBER
    (33) factor -> . VARIABLE
    (34) factor -> . ( expression )
    (35) factor -> . VARIABLE [ expression ]
    (48) self -> . SELF . VARIABLE

    )               reduce using rule 21 (expressions -> .)
    ,               reduce using rule 21 (expressions -> .)
    STR             shift and go to state 34
    NUMBER          shift and go to state 38
    VARIABLE        shift and go to state 36
    (               shift and go to state 31
    SELF            shift and go to state 14

    expressions                    shift and go to state 39
    expression                     shift and go to state 40
    term                           shift and go to state 32
    factor                         shift and go to state 33
    self                           shift and go to state 35

state 20

    (12) operation -> VARIABLE + . = expression

    =               shift and go to state 41


state 21

    (13) operation -> VARIABLE - . = expression

    =               shift and go to state 42


state 22

    (41) run_function -> VARIABLE . . VARIABLE ( expressions )

    VARIABLE        shift and go to state 43


state 23

    (16) assignment -> self = . VARIABLE
    (11) operation -> self = . expression
    (24) expression -> . term
    (25) expression -> . expression + term
    (26) expression -> . expression - term
    (27) term -> . factor
    (28) term -> . term * factor
    (29) term -> . term / factor
    (30) factor -> . STR
    (31) factor -> . self
    (32) factor -> . NUMBER
    (33) factor -> . VARIABLE
    (34) factor -> . ( expression )
    (35) factor -> . VARIABLE [ expression ]
    (48) self -> . SELF . VARIABLE

    VARIABLE        shift and go to state 44
    STR             shift and go to state 34
    NUMBER          shift and go to state 38
    (               shift and go to state 31
    SELF            shift and go to state 14

    self                           shift and go to state 35
    expression                     shift and go to state 45
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 24

    (36) print -> PRINT ( . variables )
    (42) variables -> .
    (43) variables -> . VARIABLE
    (44) variables -> . self
    (45) variables -> . variables , VARIABLE
    (46) variables -> . variables , self
    (48) self -> . SELF . VARIABLE

    )               reduce using rule 42 (variables -> .)
    ,               reduce using rule 42 (variables -> .)
    VARIABLE        shift and go to state 47
    SELF            shift and go to state 14

    variables                      shift and go to state 46
    self                           shift and go to state 48

state 25

    (37) function -> DEF VARIABLE . ( variables ) { statements }
    (38) function -> DEF VARIABLE . ( SELF ) { statements }
    (39) function -> DEF VARIABLE . ( SELF , variables ) { statements }

    (               shift and go to state 49


state 26

    (48) self -> SELF . . VARIABLE

    VARIABLE        shift and go to state 50


state 27

    (47) class -> CLASS VARIABLE . { statements }

    {               shift and go to state 51


state 28

    (17) assignment -> VARIABLE = VARIABLE .
    (19) assignment -> VARIABLE = VARIABLE . [ expression ]
    (20) assignment -> VARIABLE = VARIABLE . ( expressions )
    (33) factor -> VARIABLE .
    (35) factor -> VARIABLE . [ expression ]

  ! reduce/reduce conflict for VARIABLE resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
  ! reduce/reduce conflict for PRINT resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
  ! reduce/reduce conflict for DEF resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
  ! reduce/reduce conflict for CLASS resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
  ! reduce/reduce conflict for SELF resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
  ! reduce/reduce conflict for $end resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
  ! reduce/reduce conflict for } resolved using rule 17 (assignment -> VARIABLE = VARIABLE .)
    VARIABLE        reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    PRINT           reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    DEF             reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    CLASS           reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    SELF            reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    $end            reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    }               reduce using rule 17 (assignment -> VARIABLE = VARIABLE .)
    [               shift and go to state 52
    (               shift and go to state 53
    *               reduce using rule 33 (factor -> VARIABLE .)
    /               reduce using rule 33 (factor -> VARIABLE .)
    +               reduce using rule 33 (factor -> VARIABLE .)
    -               reduce using rule 33 (factor -> VARIABLE .)

  ! VARIABLE        [ reduce using rule 33 (factor -> VARIABLE .) ]
  ! PRINT           [ reduce using rule 33 (factor -> VARIABLE .) ]
  ! DEF             [ reduce using rule 33 (factor -> VARIABLE .) ]
  ! CLASS           [ reduce using rule 33 (factor -> VARIABLE .) ]
  ! SELF            [ reduce using rule 33 (factor -> VARIABLE .) ]
  ! $end            [ reduce using rule 33 (factor -> VARIABLE .) ]
  ! }               [ reduce using rule 33 (factor -> VARIABLE .) ]


state 29

    (15) assignment -> VARIABLE = NUMBER .
    (32) factor -> NUMBER .

  ! reduce/reduce conflict for VARIABLE resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for PRINT resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for DEF resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for CLASS resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for SELF resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for $end resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for } resolved using rule 15 (assignment -> VARIABLE = NUMBER .)
    VARIABLE        reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    PRINT           reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    DEF             reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    CLASS           reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    SELF            reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    $end            reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    }               reduce using rule 15 (assignment -> VARIABLE = NUMBER .)
    *               reduce using rule 32 (factor -> NUMBER .)
    /               reduce using rule 32 (factor -> NUMBER .)
    +               reduce using rule 32 (factor -> NUMBER .)
    -               reduce using rule 32 (factor -> NUMBER .)

  ! VARIABLE        [ reduce using rule 32 (factor -> NUMBER .) ]
  ! PRINT           [ reduce using rule 32 (factor -> NUMBER .) ]
  ! DEF             [ reduce using rule 32 (factor -> NUMBER .) ]
  ! CLASS           [ reduce using rule 32 (factor -> NUMBER .) ]
  ! SELF            [ reduce using rule 32 (factor -> NUMBER .) ]
  ! $end            [ reduce using rule 32 (factor -> NUMBER .) ]
  ! }               [ reduce using rule 32 (factor -> NUMBER .) ]


state 30

    (10) operation -> VARIABLE = expression .
    (25) expression -> expression . + term
    (26) expression -> expression . - term

    VARIABLE        reduce using rule 10 (operation -> VARIABLE = expression .)
    PRINT           reduce using rule 10 (operation -> VARIABLE = expression .)
    DEF             reduce using rule 10 (operation -> VARIABLE = expression .)
    CLASS           reduce using rule 10 (operation -> VARIABLE = expression .)
    SELF            reduce using rule 10 (operation -> VARIABLE = expression .)
    $end            reduce using rule 10 (operation -> VARIABLE = expression .)
    }               reduce using rule 10 (operation -> VARIABLE = expression .)
    +               shift and go to state 54
    -               shift and go to state 55


state 31

    (34) factor -> ( . expression )
    (24) expression -> . term
    (25) expression -> . expression + term
    (26) expression -> . expression - term
    (27) term -> . factor
    (28) term -> . term * factor
    (29) term -> . term / factor
    (30) factor -> . STR
    (31) factor -> . self
    (32) factor -> . NUMBER
    (33) factor -> . VARIABLE
    (34) factor -> . ( expression )
    (35) factor -> . VARIABLE [ expression ]
    (48) self -> . SELF . VARIABLE

    STR             shift and go to state 34
    NUMBER          shift and go to state 38
    VARIABLE        shift and go to state 36
    (               shift and go to state 31
    SELF            shift and go to state 14

    expression                     shift and go to state 56
    term                           shift and go to state 32
    factor                         shift and go to state 33
    self                           shift and go to state 35

state 32

    (24) expression -> term .
    (28) term -> term . * factor
    (29) term -> term . / factor

    +               reduce using rule 24 (expression -> term .)
    -               reduce using rule 24 (expression -> term .)
    VARIABLE        reduce using rule 24 (expression -> term .)
    PRINT           reduce using rule 24 (expression -> term .)
    DEF             reduce using rule 24 (expression -> term .)
    CLASS           reduce using rule 24 (expression -> term .)
    SELF            reduce using rule 24 (expression -> term .)
    $end            reduce using rule 24 (expression -> term .)
    }               reduce using rule 24 (expression -> term .)
    ]               reduce using rule 24 (expression -> term .)
    )               reduce using rule 24 (expression -> term .)
    ,               reduce using rule 24 (expression -> term .)
    *               shift and go to state 57
    /               shift and go to state 58


state 33

    (27) term -> factor .

    *               reduce using rule 27 (term -> factor .)
    /               reduce using rule 27 (term -> factor .)
    +               reduce using rule 27 (term -> factor .)
    -               reduce using rule 27 (term -> factor .)
    VARIABLE        reduce using rule 27 (term -> factor .)
    PRINT           reduce using rule 27 (term -> factor .)
    DEF             reduce using rule 27 (term -> factor .)
    CLASS           reduce using rule 27 (term -> factor .)
    SELF            reduce using rule 27 (term -> factor .)
    $end            reduce using rule 27 (term -> factor .)
    }               reduce using rule 27 (term -> factor .)
    ]               reduce using rule 27 (term -> factor .)
    )               reduce using rule 27 (term -> factor .)
    ,               reduce using rule 27 (term -> factor .)


state 34

    (30) factor -> STR .
